$Id: CHANGES,v 1.276 2005/06/08 09:34:33 stelian Exp $

Changes between versions 0.4b40 and 0.4b41 (released ???????????)
=================================================================

1.	Fix restore of dumped Access Control Lists. The previous
	code for EA works fine, but ACLs needed conversion from the
	ext2/3 disk format to posix_acl format before restoring.

Changes between versions 0.4b39 and 0.4b40 (released May 2, 2005)
=================================================================

1.	Changed restore to emit warnings (instead of emitting a fatal
	error) if a file (or a directory) is unavailable for a 
	comparision (if the user doesn't have the necessary permissions
	to access it for example). Thanks to Kenneth Porter
	<shiva@sewingwitch.com> for the bug report.

2.	Re-done the 'do not save directory entries to non-dumped inodes
	(excluded from dump)' feature. The previous implementation
	worked well for excluded directories but not for regular files.
	Thanks to Kenneth Porter <shiva@sewingwitch.com> for the bug
	report.

3.	Fixed a bug in dump where the tape size was miscalculated when
	the user used -d/-s to specify the tape characteristics. Thanks
	to Philip Goisman <goisman@physics.arizona.edu> for reporting
	the bug.

4.	Fixed another bug introduced in restore with the hashtree
	implementation. This one caused restore to stop saying
	"removenode: non-empty directory" in some cases.

5.	Added support for dumping and restoring ext2/3 extended
	attributes (EA), like the access control lists (ACL) or
	the security labels used by SELinux.

Changes between versions 0.4b38 and 0.4b39 (released January 21, 2005)
======================================================================

1.	The newly added dump_on_cd_3 example was buggy, replace it
	with an updated version from Andrew Basterfield
	<bob@cemetery.homeunix.org>.

2.	Made restore to chdir() back into the initial directory when
	dumping core while aborting a comparision operation. The